# villain-vst

./: .gitignore  CMakeLists.txt  Knob_Rogan1PSBlue-V2.knob  README.md  abstract-shapes-fiery-black-yellow-lava-texture_124507-26153.avif  characters list.txt  full code.txt  github reference.txt  heros names.txt  models description.txt  prompt.txt  sizes and distances.txt
.github/workflows/: build_au.yml  build_clap.yml  build_clap_mac.yml  build_clap_windows.yml  build_mac.yml  build_mac_installer.yml  build_windows.yml
LATEST VERSION/MAC/AU/: CodeResources  Info.plist
LATEST VERSION/MAC/Villain.clap/Contents/: CodeResources  Info.plist
LATEST VERSION/MAC/Villain.clap/Contents/_CodeSignature/: CodeResources
LATEST VERSION/MAC/Villain.vst3/Contents/: CodeResources  Info.plist
LATEST VERSION/MAC/Villain.vst3/Contents/Resources/: moduleinfo.json
LATEST VERSION/MAC/Villain.vst3/Contents/_CodeSignature/: CodeResources
LATEST VERSION/WINDOWS/CLAP/: Villain.exp  Villain.lib
LATEST VERSION/WINDOWS/VST3/: Villain.exp  Villain.lib
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
